syntax = "proto3";

package api.chat;

import "chat.enum.proto";

message ChatRes {
    EStatus status = 1;
    string message = 2;
}

message Stub {

}

message Autor {
    string id = 1;
    string name = 2;
    string avatar = 3;
}

message Message {
    string id = 1;
    Autor author = 2;
    string message = 3;
    string updatedAt = 4;
}
